@@ -22,6 +22,7 @@ CURRENT VERSION:
 	other game.ini properties work fully now
 
 	Android 29 can view hint at any point
+		   annihilate button added to battle dialog
 	Android 28 can resign from a online game
 	Android 27 do not allow someone to make a mission online game with a map that does not have missions
 		   display lobby chat messages more correctly
